XFA - Page can be too small when printing (bug 1723705)

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1845,7 +1845,7 @@ html[dir="rtl"] #documentPropertiesOverlay .row > * {
   }
 
   #printContainer > .xfaPrintedPage .xfaPage {
-    position: initial;
+    position: absolute;
   }
 
   #printContainer > .xfaPrintedPage {
